[project]
name = "kaggle-competition-disaster-tweets"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Santos",email = "marco.inctva2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
